// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`params decorators should add parameter metadata to a class when decorated with @params 1`] = `
Array [
  Array [
    [Function],
    ParamDecoratorFactory {
      "args": Array [
        "id",
      ],
      "handler": [Function],
      "type": "params",
    },
  ],
  Array [
    [Function],
    ParamDecoratorFactory {
      "args": Array [
        "cat",
      ],
      "handler": [Function],
      "type": "query",
    },
  ],
  Array [
    [Function],
    ParamDecoratorFactory {
      "args": Array [],
      "handler": [Function],
      "type": "request",
    },
  ],
  Array [
    [Function],
    ParamDecoratorFactory {
      "args": Array [],
      "handler": [Function],
      "type": "response",
    },
  ],
]
`;

exports[`params decorators should add parameter metadata to a class when decorated with @params 2`] = `
Array [
  Array [
    [Function],
    ParamDecoratorFactory {
      "args": Array [
        "dog",
      ],
      "handler": [Function],
      "type": "body",
    },
  ],
]
`;

exports[`params decorators should add parameter metadata to a class when decorated with @params 3`] = `
Array [
  Array [
    [Function],
    ParamDecoratorFactory {
      "args": Array [
        "Auth",
      ],
      "handler": [Function],
      "type": "headers",
    },
  ],
  Array [
    [Function],
    ParamDecoratorFactory {
      "args": Array [],
      "handler": [Function],
      "type": "cookies",
    },
  ],
  Array [
    [Function],
    ParamDecoratorFactory {
      "args": Array [],
      "handler": [Function],
      "type": "next",
    },
  ],
]
`;
